6599270: Using EmbeddedFrame in SWT leads to a hang

Excluding EmbeddedFrame from the workaround of activating a toplevel in not foreground process.

Reviewed-by: son